# PSFE-Individual-Assignment

./: .env.example  .gitignore  API_KEY_SECURITY_AUDIT.md  CODE_REVIEW.md  DOCUMENTATION_AND_DEPENDENCIES_AUDIT.md  DOCUMENTATION_AUDIT.md  ERROR_HANDLING_ANALYSIS.md  Finance Check 50_30_20 Templates.xlsx  GIT_LOG.txt  GIT_LOG_DETAILED.txt  GIT_LOG_DETAILED_CHRONOLOGICAL.txt  LEGACY_FILES.md  LOGGING.md  MIGRATION.md  PROJECT_REVIEW.md  QUICK_REFERENCE.md  README.md  REDUNDANCY_SUMMARY.md  REVIEW_SUMMARY.md  SECURITY.md  SECURITY_IMPROVEMENT_CHECKLIST.md  app.py  main.py  pyproject.toml  requirements-frozen.txt  requirements.md  requirements.txt  run_web_app.sh  setup.py  test_app.py  test_async_gemini.py  web_app.py
.github/: copilot-instructions.md
data/: Finance Check 50_30_20 Templates.xlsx  currencies.json
legacy/: setup.py
modules/: __init__.py  ai.py  config.py  logic.py  pdf_generator.py  ui.py
scripts/: security_audit.sh
src/finance_app/: ai.py  config.py  log_masker.py  logging_config.py  logic.py  models.py  pdf_generator.py  rate_limiting.py  sanitizer.py
tests/: test_app.py  test_log_masking.py  test_performance.py  test_pydantic_validation.py  test_rate_limiting.py  test_sanitization.py
