[project]
name = "finance-app"
version = "0.1.0"
description = "Finance Health Check 50/30/20 Streamlit web app"
authors = [
  { name = "Finance Health Check" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["legacy*", "tests*"]
